# uOPL

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: compilation.yml
ee_core/include/: ee_core.h  modules.h
ee_core/src/: iopmgr.c  main.c
gfx/: icon.sys
include/: bdmsupport.h  config.h  dia.h  dialogs.h  extern_irx.h  gui.h  ioman.h  iosupport.h  opl.h  renderman.h  supportbase.h  system.h  texcache.h  textures.h  themes.h  util.h
lng_tmpl/: _base.yml
misc/: conf_theme_OPL.cfg  conf_theme_OPL_CF.cfg
modules/: usbmass_bd_mini_single.irx  usbmass_bd_single.irx
modules/hdd/xhdd/: xatad.c  xhdd.c
modules/iopcore/cdvdman/: Makefile  atad.c  cdvdman.c  device-hdd.c  ioplib_util.c  ncmd.c
modules/iopcore/patch_membo/: Makefile  main.c
modules/smap_udpbd/src/: main.c  ministack.c  ministack.h  udpbd.c  udpbd.h  udptty.c  xfer.c
src/: bdmsupport.c  config.c  debug.c  dia.c  dialogs.c  gui.c  guigame.c  hddsupport.c  ioman.c  menusys.c  opl.c  renderman.c  supportbase.c  system.c  texcache.c  textures.c  themes.c  util.c
